test: add unit tests and fix some bugs